Tweak empty dashboard spacing, fix white border at bottom when rotated icon in message

--- a/src/app/view/console-error/console-error.scss
+++ b/src/app/view/console-error/console-error.scss
@@ -9,7 +9,7 @@
 
 .console-error.console-error-block {
   padding-top: 100px;
-  width: 75%;
+  @include flex-align(center, center, column);
 
   .btn {
     margin-top: $hpe-unit-space;
