--- a/src/app/view/endpoints/dashboard/endpoints-dashboard.scss
+++ b/src/app/view/endpoints/dashboard/endpoints-dashboard.scss
@@ -9,8 +9,8 @@
     }
   }
 
-  .endpoints-empty-table {
-    margin: 0 $hpe-unit-space;
+  .console-error-block {
+    padding-top: $hpe-unit-space*2;
   }
 
   .endpoints-table {
